--- a/admin/css/wp-survey-funnel-admin.css
+++ b/admin/css/wp-survey-funnel-admin.css
@@ -2,3 +2,122 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+:root {
+	--primary: #0F4C81;
+}
+
+.wpsf-container-fluid {
+	width: 100%;
+}
+
+.wpsf-container {
+	margin: 0px 36px;
+}
+.wpsf-top-navbar {
+	height: 100%;
+}
+
+#wpcontent {
+	padding: 0;
+}
+
+#wpwrap {
+	background: #F0F2F5;
+}
+
+.--wpsf-flex {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.wpsf-navbar {
+	background: #fff;
+	height: 80px;
+}
+
+.wpsf-logo {
+	color: var( --primary );
+	font-size: 26px;
+}
+
+.wpsf-dashboard-container {
+	padding: 30px 0px;
+}
+
+.wpsf-dashboard-container .wpsf-left {
+	font-size: 22px;
+	color: #495560;
+}
+
+.wpsf-search {
+	margin-right: 24px;
+}
+
+.wpsf-right input,select {
+	padding: 13px 10px;
+}
+
+.wpsf-content {
+	width: 278px;
+	height: 250px;
+}
+
+.wpsf-card-container > div:first-child {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.wpsf-content {
+	background: #fff;
+	border-radius: 9px;
+	margin: 0px 32px 32px 0px;
+}
+
+.wpsf-create-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.wpsf-create-button > button{
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	border-color: #707070;
+	color: #fff;
+	background: var( --primary );
+	font-size: 30px;
+}
+
+.wpsf-content {
+	padding: 3px;
+}
+
+.wpsf-image {
+	background: #E1E8F0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 164px;
+	border-radius: 9px;
+}
+
+.wpsf-image-box {
+	position: relative;
+}
+
+.wpsf-image-box > .wpsf-post-status {
+	position: absolute;
+	width: 100%;
+	top: 0;
+}
+
+.wpsf-badge {
+	padding: 4.5px 8.5px;
+	background: green;
+	color: white;
+	border-radius: 7px;
+}
