SRF-5: Added tabs for multiple components

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,38 @@
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-html, body {
-	margin: 0;
-	padding: 0;
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.tab-list {
+    border-bottom: 1px solid #ccc;
+    padding-left: 0;
+}
+
+.tab-list-item {
+    display: inline-block;
+    list-style: none;
+    margin-bottom: -1px;
+    padding: 0.5rem 0.75rem;
+}
+
+.tab-list-active {
+    background-color: white;
+    border: solid #ccc;
+    border-width: 1px 1px 0 1px;
+}
+
+.build-elements_box {
+	border: 1px dashed gray;
+	background-color: white;
+	padding: 2rem;
+	margin-bottom: 2rem;
+	cursor: move;
+	float: left;
+	width: 100%;
+	text-align: center;
 }
