--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,3 +36,8 @@ body {
 	width: 100%;
 	text-align: center;
 }
+
+.design-container {
+    display: grid;
+    grid-template-columns: 1fr 2.5fr;
+}
