--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,17 +27,39 @@ body {
 }
 
 .build-elements_box {
-	border: 1px dashed gray;
-	background-color: white;
-	padding: 2rem;
-	margin-bottom: 2rem;
-	cursor: move;
-	float: left;
-	width: 100%;
-	text-align: center;
+    border: 1px dashed gray;
+    background-color: white;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    cursor: move;
+    float: left;
+    width: 100%;
+    text-align: center;
 }
 
 .design-container {
     display: grid;
     grid-template-columns: 1fr 2.5fr;
+}
+
+.picker {
+    position: relative;
+}
+
+.swatch {
+    width: 28px;
+    height: 28px;
+    border-radius: 8px;
+    border: 3px solid #fff;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.popover {
+    position: absolute;
+    top: calc(100% + 2px);
+    left: 0;
+    border-radius: 9px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+    z-index: 999;
 }
