Workdone for reports page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,3 +63,8 @@ body {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
     z-index: 999;
 }
+
+.datePickerInput {
+    background: teal;
+    color: white;
+}
