Added styles for content name pop up and minor fixes

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -91,7 +91,10 @@
         }
         input:checked + label{
             background-color: #E2EDFF;
-         }
+        }
+        input:hover + label{
+            background-color: #E2EDFF;
+        }
     }
 }
 .wpsf-tab-FormElements{
