--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -15,6 +15,9 @@
     src: url("../../assets/fonts/Apercu-Font/Apercu\ Pro\ Medium.otf") format("opentype");
 }
 .tab-list{
+    border-radius: 12px;
+    width: 100%;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
     .tab-container{
         .tab{
             h3{
@@ -48,7 +51,6 @@
 .wpsf-tab-CoverPage, .wpsf-tab-ResultScreen, .wpsf-tab-SingleChoice, .wpsf-tab-MultiChoice, .wpsf-tab-FormElements{
     border-radius: 12px;
     width: 100%;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 .wpsf-tab-CoverPage, .wpsf-tab-ResultScreen{
     display:flex;
@@ -106,7 +108,7 @@
     textarea{
         
     border: 1px solid rgba(181, 220, 255, 0.58);
-    width: 80%;
+    width: 100%;
     height: 80px;
     border-radius: 9px;
     margin: 10px 0;
@@ -114,7 +116,7 @@
     }
     input{
         border: 1px solid rgba(181, 220, 255, 0.58);
-        width: 80%;
+        width: 100%;
         height: 40px;
         border-radius: 9px;
         margin: 10px 0;
