--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -395,6 +395,7 @@ body {
                         justify-content: center;
                         align-items: center;
                         width: 100%;
+                        height: 100%;
                     }
                     .wpsf-dropboard{
                         margin-left: 20px;
