Sharepage, frontend changes

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -126,3 +126,57 @@
         justify-content: center;
     }
 }
+
+.wpsf-design-preview-container{
+    .wpsf-survey-form{
+        display: flex;
+        justify-content: center;
+        overflow: auto;
+        height: calc(100vh - 108px);
+        .wpsf-design-preview-container{
+            width: 100%;
+            .preview{
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                .tab-list{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                }
+            }
+        }
+        .tab-controls{
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            margin-top: 20px;
+            button{
+                background-color: #F0F2F5;
+                border: 1px solid #d2dae2;
+                color: #60554F;
+                padding: 8px 15px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                cursor: pointer;
+                border-radius: 9px;
+            }
+            button:disabled{
+                opacity: 0.7;
+                background-color: #FFFFFF;
+            }
+        }
+        .no-preview-available{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+    }
+
+}
