Reports page completed

--- a/src/scss/reports.scss
+++ b/src/scss/reports.scss
@@ -14,12 +14,7 @@
     font-weight: 500;
     src: url("../../assets/fonts/Apercu-Font/Apercu\ Pro\ Medium.otf") format("opentype");
 }
-.wpsf-header-tab-list:first-child{
-    border-radius: 9px 0 0 9px;
-}
-.wpsf-header-tab-list:nth-child(2){
-    border-radius: 0 9px 9px 0;
-}
+
 .wpsf-reports-body{
     background-color: #F0F2F5;
     height: 100vh;
@@ -30,7 +25,7 @@
         .datePicker{
             position: absolute;
             top: 128px;
-            right: calc(calc(100vw - 1315px)/2);
+            right: calc(calc(100vw - 1275px)/2);
             display: flex;
             background-color: #fff;
             padding: 13px 20px;
@@ -39,7 +34,13 @@
                 input{
                     font-family: 'ApercuPro';
                     border:none;
-                    width: 100px;
+                    width: 120px;
+                    padding: 0 10px;
+                    outline: none;
+                }
+                .rdtPicker{
+                    right: 7%;
+                    top: 35px;
                 }
             }        
         }
@@ -48,6 +49,12 @@
                 margin: 0;
                 padding-inline-start: 0;
                 padding-top: 20px;
+                li:first-child{
+                    border-radius: 9px 0 0 9px;
+                }
+                li:nth-child(2){
+                    border-radius: 0 9px 9px 0;
+                }
                 .tab-list-item{
                     display: inline-block;
                     list-style: none;
@@ -62,18 +69,24 @@
                 }
             }
             .wpsf-header-tab-content{
-                overflow: auto;
+                overflow-y: auto;
+                overflow-x: hidden;
                 height: calc(100vh - 200px);
                 margin-top: 20px;
                 .insightsOverview{
+                    .insightBox:first-child{
+                        border-radius: 9px 0 0 9px;
+                    }
+                    .insightBox:nth-child(3){
+                        border-radius: 0 9px 9px 0;
+                    }
                     .insightBox{
-                        width: 439px;
                         display: flex;
                         flex-direction: column;
                         justify-content: center;
                         align-items: center;
                         float: left;
-                        width: 430px;
+                        width: 432px;
                         background-color: #FFFFFF;
                         height: 162px;
                         border-right: 1px solid #E0E0E0;
@@ -145,6 +158,7 @@
                             height: calc(100vh - 290px);
                             .selectionElements{
                                 height: calc(100vh - 400px);
+                                overflow: overlay!important;
                                 overflow: auto;
                                 .selectionElement{
                                     margin-bottom: 20px;
@@ -198,6 +212,9 @@
                     .responsePreview{
                         p{
                             margin-top: 0;
+                            img{
+                                width: 15px;
+                            }
                         }
                         .wpsf-preview-container{
                             background-color: #ffffff;
@@ -212,7 +229,7 @@
                                 }
                             }
                             .currentReportAnswer{
-                                width: 840px;
+                                width: 800px;
                                 padding: 18px 20px;
                                 background-color: #F0F2F5;
                                 border-radius: 9px;
